More converters + cleanup